--- a/get-links.ipynb
+++ b/get-links.ipynb
@@ -2,49 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import PyPDF2 as pdf\n",
+    "import fitz\n",
     "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PDFFile = open(\"data\\\\Datos_abiertos_historicos_etv_2022.pdf\",'rb')"
+    "pdf_path = \"data\\\\Datos_abiertos_historicos_etv_2022.pdf\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<_io.BufferedReader name='data\\\\Datos_abiertos_historicos_etv_2022.pdf'>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PDFFile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
