--- a/get-data.ipynb
+++ b/get-data.ipynb
@@ -1062,7 +1062,16 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mEl Kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. Revise el código de las celdas para identificar una posible causa del error. Haga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. Vea el [registro] de Jupyter (command:jupyter.viewOutput) para obtener más detalles."
+     ]
+    }
+   ],
    "source": [
     "folder_path_data = os.path.join('data','dengue_2022.csv')\n",
     "dengue_data = pd.read_csv(folder_path_data)\n",
